--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,15 @@
     <p>ankithapurami@gmail.com</p></i>
 
 <hr>
-    <form class="" action="index.html" method="post">
-      <label>Your name:</label>
-      <input type="text"><br>
-      <label>Enter email</label>
-      <input type="email"><br>
-<label>YOUR MESSAGE</label><br>
+    <form class="" action="mailto:ankithapurami@gmail.com" method="post">
+      <label><i><b>Your name:</b></i></label>
+      <input type="text"name="yourname:"><br>
+      <label><i><b>Enter email:</b></i></label>
+      <input type="email" name="youremail:"><br>
+<label><i><b>YOUR MESSAGE</b></i></label><br>
 <textarea name="name" id="" cols="30" rows="10"></textarea><br>
 <input type="submit">
     </form>
-    <hr>
+    
 </body>
 </html>
